Several updates in the display, like: - Collapsing the updatable annotations - Display the exons (with the other exon numbering) in the updatable annotations and remove the other exon numbering from the fixed annotations

--- a/lrg2html.css
+++ b/lrg2html.css
@@ -264,7 +264,7 @@ div.section{
   border-bottom: 1px dotted #003399;
   background-color:#FFF;
   padding: 5px 0px;
-  margin-bottom:5px;
+  margin-bottom:15px;
 }
 
 h2.section{
@@ -275,7 +275,7 @@ h2.section{
 }
 
 div.source{
-  margin-left:-5px;
+  margin-left:0px;
   padding:5px 2px;
   background-color:#E0E0E0;
   border-top: 1px solid #003399;
@@ -360,6 +360,13 @@ h3.mapping {
   border: 0px;
   padding: 0px;
   font-weight: bold;
+}
+
+.contact_lbl_long {
+  border: 0px;
+  padding: 0px;
+  font-weight: bold;
+  width:70px;
 }
 
 .contact_val {
@@ -506,12 +513,12 @@ h3.mapping {
 
 .oddDiv {
   background: #F9F9F9;
-  margin: 5px;
+  margin: 5px 5px 60px;
 }
      
 .evenDiv {
   background: #FFFFFF;
-  margin: 5px;
+  margin: 5px 5px 60px;
 }
 
 .hidden {
@@ -526,6 +533,7 @@ h3.mapping {
 
 div.meta_source {
   background: #F9F9F9;
+  margin-top:20px;
 }
 
 div.requester_source {
@@ -547,6 +555,7 @@ div.external_source {
 div.lrg_source {
 	background-color: #F0F0F0; 
 	padding-left: 5px;
+  padding-top: 2px;
 }
 
 div.lrg_transcript {
@@ -560,6 +569,29 @@ div.lrg_transcript {
 div.fixed_transcript_annotation {
   padding-left: 5px;
   clear: both;
+}
+
+div.key_left {
+  float:left;
+  font-weight:bold;
+  margin-top:5px;
+}
+
+div.key_right {
+  float:left;
+  margin-left:5px;
+  padding:5px;
+  background-color:#FFF;
+  border:1px solid #EEE;
+  border-radius:10px;
+}
+
+ul.key{
+  margin-left:10px;
+  margin-bottom:0px;
+}
+li.key {
+  margin-bottom:5px;
 }
 
 .legend {
@@ -578,7 +610,8 @@ div.fixed_transcript_annotation {
 .hide_button {
   vertical-align:middle;
   border:1px solid #3f9221;
-  padding:2px;
+  border-radius:8px;
+  padding:1px 2px;
   text-decoration:none;
   background-color: #48a726;
   color:#FFF;
@@ -589,13 +622,39 @@ div.fixed_transcript_annotation {
 }
 
 .show_hide {
-  border:1px solid #CCC;
-  padding:1px;
+  border:1px solid #AAA;
+  border-radius:8px;
+  padding:1px 2px;
   margin-left:5px;
 }
 .show_hide:hover {
   border:1px solid #48a726;
   text-decoration:none;
+  background-color:#FFF;
 }
 
+a.show_hide_anno {
+  vertical-align:middle;
+  border:1px solid #3f9221;
+  border-radius:9px;
+  padding:2px;
+  left:350px;
+  position:absolute;
+  text-decoration:none;
+  background-color: #48a726;
+  color:#FFF;
+}
+a.show_hide_anno:hover {
+  border:1px solid #48a726;
+  text-decoration:none;
+  background-color: #FFF;
+  color: #48a726;
+}
+
+div.top_up_anno_link {
+  float:right;
+  padding:0px 4px 4px;
+  font-size:0.9em;
+  background-color:#F9F9F9;
+}
 
